<resources>
    <string name="app_name">Strabismus eye </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_headline_articles">معلومات وإرشادات</string>
    <string name="text_secheadline_articles">تم تشخيص العديد من الأمراض المتاحة حتى الآن وإدراج العديد من الإرشادات والتعليمات لكل مرض، قم باختيار نوع المرض المصاب به لمتابعة القراءة</string>
    <string name="card1_headline">الحول</string>
    <string name="card2_headline">الحول الخلقي</string>
    <string name="card3_headline">الحول</string>
    <string name="card4_headline">الحول</string>
    <string name="card5_headline">الحول</string>
    <string name="take_photo">التقط صورة</string>
    <string name="text_des">قم بالسماح للوصول إلى الكاميرا ليتم التقاط صورة لمكان المرض ليتم تشخيصه بشكل دقيق وترشيح التمارين والإجراءات المناسبة لعلاجه</string>
    <string name="text_now">افحص الان</string>
    <string name="exer_headline">التمارين</string>
    <string name="select">حدد الصورة</string>
    <string name="exer_des">يجب تحديد نوعية التمرينات التي ترغب في القيام بها، ليتم توجيهك إليها.</string>
    <string name="start_ex">ابدأ التمرين الآن</string>
    <string name="card1">الحول عند الأطفال</string>
    <string name="card2">الحول عند البالغين</string>
    <string name="card3">الغمش او العين الكسولة</string>
    <string name="card4">الفرق بين الحول والعين الكسولة</string>
    <string name="card5">ازدواجية الرؤية</string>
    <string name="card6">الرضع والأطفال والمراهقين</string>
    <string name="button_back">العودة</string>
    //////////////////
    <string name="text_headline_exersice">التمارين</string>
    <string name="text_secheadline_exercise">يجب تحديد إحدى أنواع التمرينات المدرجة ليتم التوجيه إلى صفحة التمرين ومتابعة الإرشادات الخاصة به.</string>
    <string name="button_next">التالي</string>
    <string name="exe1">تمارين لتقليل إجهاد العين</string>
    <string name="exe2">علاج الحول بدون جراحة</string>
    <string name="exe3">تمرين تغيير التركيز</string>
    <string name="exe4">تدليك العين</string>
    <string name="exe5">تمارين لحول العين، والعين الكسولة.</string>
    <string name="exe6">تمارين إضافية</string>
    <string name="skip">تخطى</string>
    <string name="Next">التالي</string>
    <string name="getStarted">لنبدأ</string>
</resources>