<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".camera.Camera">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="159dp"
            android:layout_height="185dp"
            android:layout_margin="8dp"
            android:src="@drawable/no_pictures"
            app:civ_border_color="#A8E1E4EA"
            app:civ_border_width="40dp" />

        <TextView
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/take_photo"
            android:textColor="@color/black"

            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/text_des"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"

            android:textStyle="normal" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="@string/text_now"

            android:textColor="@color/white" />
    </LinearLayout>


</FrameLayout>