<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".articles.Articles">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_text"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:fontFamily="@font/amiri_italic"
                android:textColor="@color/text_color"
                android:text="@string/text_headline_articles"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/seceader_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/text_secheadline_articles"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:fontFamily="@font/amiri"
                android:textSize="18dp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/adult_hawel"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back_ground_cards"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/back_ground_cards"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/card2_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/back_ground_cards"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/card2_image" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/text_color"
                        android:shadowColor="@color/background_color"
                        android:text="@string/card2"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/kid_hawel"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back_ground_cards"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/card1_image" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/text_color"
                        android:text="@string/card1"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/differance_lazy_hawel"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back_ground_cards"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/card4_image" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="156dp"
                        android:layout_height="51dp"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:text="@string/card4"

                        android:textAlignment="center"
                        android:textColor="@color/text_color" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lazy_article"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back_ground_cards"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/card3_image" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/text_color"

                        android:text="@string/card3"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/protectin"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back_ground_cards"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/card6_image" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/text_color"
                        android:text="@string/card6"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sight_twice"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back_ground_cards"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/card5_image" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:layout_gravity="center"
                        android:text="@string/card5"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>

</ScrollView>